src/test/resources/frontendReference/invalid/semanticErr/class/simple/classBadScope.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 17:15 -- Variable x is not defined in this scope.